Added peer server for testing bin/www should no longer be used to run server, app.js should be used Moved server to https Added login and singup functionaliy database config is added not for as a template, also added to gitignore to not include in future

--- a/.gitignore
+++ b/.gitignore
@@ -127,4 +127,8 @@ xcuserdata/
 *.xccheckout
 *.xcscmblueprint
 
+
+# Private configuration files which should not be leaked
+private/database/config.js
+
 # Created by .ignore support plugin (hsz.mobi)
