--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
+    "fs": "0.0.2",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "mysql": "^2.5.4",
     "nodemon": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "peer": "^0.2.8",
     "serve-favicon": "~2.3.0",
     "stylus": "0.42.3"
   }
