Removed html files, added to gitignore so they will be ignored in future Change type of submit button to button in css to disable form submission

--- a/.gitignore
+++ b/.gitignore
@@ -130,5 +130,6 @@ xcuserdata/
 
 # Private configuration files which should not be leaked
 private/database/config.js
+views/*.html
 
 # Created by .ignore support plugin (hsz.mobi)
