--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-mysql-session": "^1.0.0-rc.0",
     "express-session": "^1.13.0",
     "fs": "0.0.2",
     "https": "^1.0.0",
