--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-mysql-session": "^1.0.0-rc.0",
