--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.5.4",
+    "nodemailer": "^2.3.2",
     "nodemon": "^1.9.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
