--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-local": "^1.0.0",
     "peer": "^0.2.8",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.42.3"
+    "stylus": "0.42.3",
+    "validator": "^5.2.0"
   }
 }
