--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-flash": "0.0.2",
     "express-mysql-session": "^1.0.0-rc.0",
     "express-session": "^1.13.0",
     "fs": "0.0.2",
